--- a/script/conf/mpd_fallback.conf
+++ b/script/conf/mpd_fallback.conf
@@ -1,11 +1,11 @@
 playlist_directory      "/data/radio/htdocs/data/playlist"
-music_directory 	"/external/hdd/radio/fallback"
-user 			"pi"
+music_directory 	    "/external/hdd/radio/fallback"
+user 			        "pi"
 db_file                 "/var/lib/mpd/tag_cache"
 pid_file                "/data/radio/script/conf/mpd_fallback.pid"
-buffer_before_play 	"30%"
-port			"6800"
-#bind_to_address         "127.0.0.1"
+buffer_before_play 	    "30%"
+port			        "6800"
+#bind_to_address        "127.0.0.1"
 
 audio_output {
     type        "shout"
@@ -14,11 +14,9 @@ audio_output {
     host        "localhost"
     port        "8000"
     mount       "/fallback"
-    password    "marsbase"
-#   quality     "5.0"
+    password    "mars!2060"
     bitrate     "128"
     format      "44100:16:2"
-#   user        "source"
 }
 
 audio_output {
