--- a/script/conf/mpd_playlist.conf
+++ b/script/conf/mpd_playlist.conf
@@ -1,10 +1,10 @@
 playlist_directory      "/data/radio/htdocs/data/playlist"
-music_directory 	"/external"
-user 			"pi"
+music_directory 	    "/external"
+user 			        "pi"
 db_file                 "/var/lib/mpd/tag_cache"
 pid_file                "/data/radio/script/conf/mpd_playlist.pid"
-buffer_before_play 	"30%"
-port			"6600"
+buffer_before_play 	    "30%"
+port			        "6600"
 
 audio_output {
     type        "shout"
@@ -13,11 +13,9 @@ audio_output {
     host        "localhost"
     port        "8000"
     mount       "/playlist"
-    password    "marsbase"
-#   quality     "5.0"
+    password    "mars!2060"
     bitrate     "128"
     format      "44100:16:2"
-#   user        "source"
 }
 
 audio_output {
