--- a/script/conf/mpd_playlist.conf
+++ b/script/conf/mpd_playlist.conf
@@ -1,10 +1,15 @@
-playlist_directory      "/data/radio/htdocs/data/playlist"
-music_directory 	    "/external"
-user 			        "pi"
-db_file                 "/var/lib/mpd/tag_cache"
-pid_file                "/data/radio/script/conf/mpd_playlist.pid"
-buffer_before_play 	    "30%"
-port			        "6600"
+playlist_directory   "/data/radio/htdocs/data/playlist"
+music_directory 	 "/external"
+user 			     "pi"
+db_file              "/data/radio/script/conf/mpd.cache"
+pid_file             "/data/radio/script/conf/mpd_playlist.pid"
+buffer_before_play 	 "30%"
+port			     "6600"
+
+log_level		     "default"
+log_file		     "/data/radio/script/conf/mpd_playlist.log"
+
+bind_to_address		 "127.0.0.1"
 
 audio_output {
     type        "shout"
@@ -13,7 +18,7 @@ audio_output {
     host        "localhost"
     port        "8000"
     mount       "/playlist"
-    password    "mars!2060"
+    password    "changeme"
     bitrate     "128"
     format      "44100:16:2"
 }
