--- a/script/conf/nfs.conf
+++ b/script/conf/nfs.conf
@@ -23,6 +23,16 @@
     Order allow,deny
     Allow from all
   </Directory>
+  
+  <Directory "/mnt/RAMDisk">
+    php_admin_value open_basedir none
+    Options Indexes FollowSymLinks
+    AllowOverride All
+
+    Order allow,deny
+    Allow from all
+  </Directory>
+
 
   <IfModule mod_php5.c>
     php_admin_flag display_errors on
