--- a/htdocs/data/station_config.json
+++ b/htdocs/data/station_config.json
@@ -1,27 +1,1 @@
-{
-    "max_files_per_playlist": "1000",
-    "max_playlist_entries": "1000",
-    "now_playing_show": "now_playing_show.txt",
-    "now_playing_song": "now_playing_song.txt",
-    "path_data_playlist": "data\/playlist\/",
-    "path_data_podcast": "data\/podcast\/",
-    "path_data_schedule": "data\/schedule\/",
-    "path_data_show": "data\/show\/",
-    "path_data_station": "data\/station\/",
-    "path_intro": "\/external\/hdd\/radio\/intro\/",
-    "path_music": "\/external\/hdd\/radio\/music\/",
-    "path_podcast": "\/external\/hdd\/radio\/podcast\/",
-    "path_spot": "\/external\/hdd\/radio\/spot\/",
-    "path_ramdisk": "\/mnt\/RAMDisk\/",
-    "playlist_name": "playlist.m3u",
-    "schedule_week": "week.json",
-    "station_name": "stationname",
-    "icecast_host": "servername",
-    "icecast_port": "8000",
-    "icecast_endpoint": "playlist",
-    "icecast_admin": "admin",
-    "icecast_pass": "change!me",
-    "stream_meta_every": "20",
-    "stream_meta_every_offset":"0",
-    "stream_meta_duration":"5"
-}
+{"icecast_admin":"admin","icecast_endpoint":"playlist","icecast_host":"myhost","icecast_pass":"change!me","icecast_port":"8000","max_files_per_playlist":"1000","max_playlist_entries":"1000","now_playing_show":"now_playing_show.txt","now_playing_song":"now_playing_song.txt","path_data_playlist":"data\/playlist\/","path_data_podcast":"data\/podcast\/","path_data_schedule":"data\/schedule\/","path_data_show":"data\/show\/","path_data_station":"data\/station\/","path_intro":"D:\\Data\\Backup\\Radio\\hdd\\intro","path_music":"D:\\Data\\Backup\\Radio\\hdd\\music","path_podcast":"D:\\Data\\Backup\\Radio\\hdd\\podcast","path_ramdisk":"\/mnt\/RAMDisk\/","path_spot":"D:\\Data\\Backup\\Radio\\hdd\\spot","playlist_name":"playlist.m3u","schedule_week":"week.json","station_name":"mystation","stream_meta_every":"900","stream_meta_every_duration":"20","stream_meta_every_offset":"300"}
